Rename login module to authentication, added notes to most recent record endpoint, changed error code in token_required, updated docs
