# manymiles/blueprints/api/static/swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.3",
   "info": {
     "title": "ManyMiles API",
-    "description": "This is the documentation for the ManyMiles API.\n",
+    "description": "Welcome to the documentation for the ManyMiles API.\n\nNote that API tokens expire after 24 hours.\n",
     "version": "1.0.0",
     "contact": {
       "email": "mail@jakebrehm.com"
@@ -15,6 +15,10 @@
   ],
   "tags": [
     {
+      "name": "authenticate",
+      "description": "Get authentication to use protected API endpoints"
+    },
+    {
       "name": "user",
       "description": "Access to information relevant to user accounts"
     },
@@ -24,72 +28,302 @@
     }
   ],
   "paths": {
-    "/user_id/{username}": {
+    "/authenticate": {
+      "post": {
+        "tags": [
+          "authenticate"
+        ],
+        "summary": "Get API token",
+        "description": "Generates a API token provided the user supplies a valid username and password combination.\n",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/login"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "$ref": "#/components/schemas/code"
+                    },
+                    "message": {
+                      "$ref": "#/components/schemas/message"
+                    },
+                    "token": {
+                      "$ref": "#/components/schemas/api_token"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "username and/or password not supplied",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "authentication failed or user not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "API token is missing, invalid, or has expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user": {
       "get": {
         "tags": [
           "user"
         ],
-        "summary": "Get user ID",
-        "description": "Get a user's unique identification number from their username.",
+        "summary": "Get user details",
+        "description": "Get the details of the currently authenticated user such as their username, unique identification number, email, and name.\n",
         "parameters": [
           {
-            "name": "username",
-            "in": "path",
-            "description": "The username of the user.",
+            "name": "api-token",
+            "in": "header",
+            "description": "The API token generated by the authentication endpoint.",
             "schema": {
-              "$ref": "#/components/schemas/username"
+              "$ref": "#/components/schemas/api_token"
             },
             "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "$ref": "#/components/schemas/code"
+                    },
+                    "message": {
+                      "$ref": "#/components/schemas/message"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/user_details"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "unhandled error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "user not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "API token is missing, invalid, or has expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
           }
         }
       }
     },
-    "/most_recent_record/{username}&{password}": {
+    "/record/most-recent": {
       "get": {
         "tags": [
           "record"
         ],
         "summary": "Get user's most recent record",
-        "description": "Gets the specified user's most recently recorded mileage.",
+        "description": "Gets the currently authenticated user's most recently recorded mileage.",
         "parameters": [
           {
-            "name": "username",
-            "in": "path",
-            "description": "The username of the user.",
+            "name": "api-token",
+            "in": "header",
+            "description": "The API token generated by the authentication endpoint.",
             "schema": {
-              "$ref": "#/components/schemas/username"
-            },
-            "required": true
-          },
-          {
-            "name": "password",
-            "in": "path",
-            "description": "The password of the user.",
-            "schema": {
-              "$ref": "#/components/schemas/password"
+              "$ref": "#/components/schemas/api_token"
             },
             "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "$ref": "#/components/schemas/code"
+                    },
+                    "message": {
+                      "$ref": "#/components/schemas/message"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/record_details"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "user has no records or other unhandled error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "user not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "API token is missing, invalid, or has expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "record"
+        ],
+        "summary": "Deletes user's most recent record",
+        "description": "Deletes the currently authenticated user's most recently recorded mileage.",
+        "parameters": [
+          {
+            "name": "api-token",
+            "in": "header",
+            "description": "The API token generated by the authentication endpoint.",
+            "schema": {
+              "$ref": "#/components/schemas/api_token"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "$ref": "#/components/schemas/code"
+                    },
+                    "message": {
+                      "$ref": "#/components/schemas/message"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/record_details"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "user has no records or other unhandled error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "user not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "API token is missing, invalid, or has expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
           }
         }
       }
     },
     "/add_record": {
-      "put": {
+      "post": {
         "tags": [
           "record"
         ],
         "summary": "Add a new record",
-        "description": "Adds a new mileage record for the specified user.",
+        "description": "Adds a new mileage record for the currently authenticated user.",
         "requestBody": {
           "required": true,
           "content": {
@@ -102,7 +336,55 @@
         },
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "$ref": "#/components/schemas/code"
+                    },
+                    "message": {
+                      "$ref": "#/components/schemas/message"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/record_details"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "no mileage value provided or other unhandled error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "user not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "API token is missing, invalid, or has expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/failed_response"
+                }
+              }
+            }
           }
         }
       }
@@ -110,9 +392,20 @@
   },
   "components": {
     "schemas": {
-      "user_id": {
-        "type": "integer",
-        "description": "unique identification number of the user"
+      "date": {
+        "type": "string",
+        "format": "date",
+        "description": "generic date in format %Y-%m-%d"
+      },
+      "time": {
+        "type": "string",
+        "format": "time",
+        "description": "generic time in format %H:%M"
+      },
+      "datetime": {
+        "type": "string",
+        "format": "datetime",
+        "description": "generic datetime in format %Y-%m-%d %H:%M"
       },
       "username": {
         "type": "string",
@@ -126,50 +419,107 @@
         "minLength": 7,
         "description": "password of the user"
       },
-      "user": {
+      "user_details": {
         "type": "object",
         "properties": {
+          "user_id": {
+            "type": "integer",
+            "description": "unique identification number of the user"
+          },
           "username": {
             "$ref": "#/components/schemas/username"
           },
-          "password": {
-            "$ref": "#/components/schemas/password"
+          "email": {
+            "type": "string",
+            "description": "email of the user"
+          },
+          "first_name": {
+            "type": "string",
+            "description": "first name of the user"
+          },
+          "last_name": {
+            "type": "string",
+            "description": "last name of the user"
           }
         }
       },
-      "date": {
-        "type": "string",
-        "format": "date",
-        "description": "date of a record"
-      },
-      "time": {
-        "type": "string",
-        "format": "time",
-        "description": "time of a record"
-      },
-      "mileage": {
-        "type": "integer",
-        "description": "the mileage value to be recorded"
-      },
       "record": {
         "type": "object",
+        "required": [
+          "mileage"
+        ],
         "properties": {
-          "username": {
-            "$ref": "#/components/schemas/username"
-          },
-          "password": {
-            "$ref": "#/components/schemas/password"
+          "mileage": {
+            "type": "integer",
+            "description": "the mileage value to be recorded"
           },
           "date": {
             "$ref": "#/components/schemas/date"
           },
           "time": {
             "$ref": "#/components/schemas/time"
-          },
-          "mileage": {
-            "$ref": "#/components/schemas/mileage"
           }
         }
+      },
+      "record_details": {
+        "type": "object",
+        "properties": {
+          "mileage": {
+            "type": "integer",
+            "description": "the mileage value to be recorded"
+          },
+          "notes": {
+            "type": "string",
+            "description": "notes of a record"
+          },
+          "recorded": {
+            "$ref": "#/components/schemas/datetime"
+          },
+          "created": {
+            "$ref": "#/components/schemas/datetime"
+          },
+          "updated": {
+            "$ref": "#/components/schemas/datetime"
+          }
+        }
+      },
+      "login": {
+        "type": "object",
+        "required": [
+          "username",
+          "password"
+        ],
+        "properties": {
+          "username": {
+            "$ref": "#/components/schemas/username"
+          },
+          "password": {
+            "$ref": "#/components/schemas/password"
+          }
+        }
+      },
+      "code": {
+        "type": "string",
+        "description": "code of the response"
+      },
+      "message": {
+        "type": "string",
+        "description": "message of the response"
+      },
+      "failed_response": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "$ref": "#/components/schemas/code"
+          },
+          "message": {
+            "$ref": "#/components/schemas/message"
+          }
+        }
+      },
+      "api_token": {
+        "type": "string",
+        "description": "The API token generated by the authentication endpoint."
       }
     }
   }
